--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-git__pycache__/multiplo.cpython-37.pyc
+
 # C extensions
 *.so
 
@@ -106,7 +106,29 @@ celerybeat.pid
 .venv
 env/
 venv/
-__pycache__
-Include
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+include
 testes
 pyvenv.cfg
+multiplo.cpython-37.pyc
